--- a/app/css/app.css
+++ b/app/css/app.css
@@ -30,13 +30,15 @@
 }
 
 .sound_art{
-  width: 12%;
+  width: 14%;
   float:left;
+  text-align:center;
+  vertical-align:middle;
 }
 
 .sound_player {
   height: 120px;
-  width: 88%;
+  width: 86%;
   float:left;
 }
 
@@ -49,12 +51,40 @@
 }
 
 .sound_player_wave {
-    height: 75px
+    height: 75px;
+    width:98%
+}
+
+.sound_cover{
+    text-align:center;
+    vertical-align:middle;
 }
 
 .poster_img {
-   height: 150px;
-   width: 83%;
-   margin-left: 10px;
+   height: 75%;
+   width: 75%;
+   margin:0 auto;
 }
 
+.sound_player_control{
+    height: 100%;
+    width:4%;
+    float: left;
+    text-align:center;
+    vertical-align:middle;
+}
+
+.sound_player_button{
+    position:relative;
+    top: 30%;
+}
+
+.sound_owner{
+    font-family:Interstate, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Garuda, Verdana, Tahoma, sans-serif;
+    font-size: 14px;
+}
+
+.sound_title{
+    font-family: Interstate, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Garuda, Verdana, Tahoma, sans-serif;
+    font-size: 16px;
+}
