display social data

--- a/app/partials/user-stream.html
+++ b/app/partials/user-stream.html
@@ -34,12 +34,16 @@
                             </div>
                         </div>
                         <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer'>
-                            <a href="#" class="button button-small button-flat action-button"><i class="icon-heart"></i></i>  Like</a>
-                            <a href="#" class="button button-small button-flat action-button"><i class="icon-retweet"></i></i>  Repost</a>
+                            <a href="#" class="button button-small button-flat action-button"><i class="icon-heart" ng-click="toggleLike(sound.id)"></i></i>  Like</a>
+                            <a href="#" class="button button-small button-flat action-button"><i class="icon-retweet" ng-click="toggleRepost(sound.id)"></i></i>  Repost</a>
                             <div class="pull-right">
-                                <i class="icon-play-sign stat_icon"></i>{{}}
+                                <i class="icon-play-sign stat_icon"></i>{{sound.soundSocial.playedCount}}
                                 |
-                                <i class="icon-heart stat_icon"></i>{{}}
+                                <i class="icon-heart stat_icon"></i>{{sound.soundSocial.likesCount}}
+                                |
+                                <i class="icon-retweet stat_icon"></i>{{sound.soundSocial.reportsCount}}
+                                |
+                                <i class="icon-comment stat_icon"></i>{{sound.soundSocial.commentsCount}}
                             </div>
                         </div>
                     </div>
