--- a/app/partials/sound-detail.html
+++ b/app/partials/sound-detail.html
@@ -32,8 +32,8 @@
                             </div>
                         </div>
                         <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer'>
-                            <a href="#" class="button button-small button-flat action-button"><i class="icon-heart"></i></i>  Like</a>
-                            <a href="#" class="button button-small button-flat action-button"><i class="icon-retweet"></i></i>  Repost</a>
+                            <a href="#" class="button button-small button-flat action-button"><i class="icon-heart" ng-click="toggleLike(sound.id)"></i></i>  Like</a>
+                            <a href="#" class="button button-small button-flat action-button"><i class="icon-retweet" ng-click="toggleRepost(sound.id)"></i></i>  Repost</a>
                             <div class="pull-right">
                                 <i class="icon-play-sign stat_icon"></i>{{}}
                                 |
