--- a/app/css/app.css
+++ b/app/css/app.css
@@ -154,3 +154,21 @@
 .stat_icon {
     margin-right:6px
 }
+
+.ul-nostyle{
+    list-style: none;
+    margin: 0;
+}
+
+.border-light-top{
+    border-top: 1px solid #f2f2f2;
+}
+
+.border-light-bottom{
+    border-bottom: 1px solid #f2f2f2;
+}
+
+.comment_body{
+    padding: 10px;
+    overflow:hidden
+}
