--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -32,7 +32,7 @@
                              <div id="sound_wave_{{sound.id}}" class='sound_player_wave'>
                              </div>
                         </div>
-                        <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer'>
+                        <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer  border-light-bottom'>
                             <div id="sound_commentbox_{{sound.id}}" class="hide">
                                <input type="text" id="sound_commentbox_input_{{sound.id}}" class="input-block-level"  placeholder="Leave your comment...">
                                <input type="hidden" id="sound_comment_point_{{sound.id}}">
