--- a/app/css/app.css
+++ b/app/css/app.css
@@ -53,7 +53,6 @@
 }
 
 .sound_player_footer{
-    height: 20%;
     padding-top: 10px;
 }
 
@@ -165,10 +164,22 @@
 }
 
 .border-light-bottom{
+    padding-bottom: 8px;
     border-bottom: 1px solid #f2f2f2;
 }
 
 .comment_body{
     padding: 10px;
     overflow:hidden
+}
+
+.userInfo__title{
+    color: #06C;
+    font-size: 24px;
+    margin-top: 20px;
+    white-space: pre-line;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding-right: 15px;
+    padding-top: 10px;
 }
