--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -9,7 +9,7 @@
                     <div id="sound_art_{{sound.id}}" class='sound_art'>
                         <div id="sound_cover_{{sound.id}}">
                             <div id="sound_cover_ul_{{sound.id}}"  class= 'poster_img'>
-                                <a href='#' ><img  ng-src="{{sound.poster}}"></a>
+                                <a href="{{sound.title.route}}" ><img  ng-src="{{sound.poster}}"></a>
                             </div>
                         </div>
                     </div>
@@ -21,7 +21,7 @@
                             </div>
                             <div id="sound_summary_{{sound.id}}">
                                 <div id="sound_owner_{{sound.id}}">
-                                    <a class='sound_owner'>{{sound.owner.alias}}</a>
+                                    <a class='sound_owner' href="{{sound.owner.route}}">{{sound.owner.alias}}</a>
                                 </div>
                                 <div id="sound_title_{{sound.id}}">
                                     <a class='sound_title' href="{{sound.title.route}}">{{sound.title.alias}}</a>
@@ -39,7 +39,7 @@
                             </div>
                             <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i> {{sound.soundUserPrefer.likeWording}}</a>
                             <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleRepost(sound.id)"><i class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
-                            <div class="pull-right">
+                            <div class="pull-right"x`>
                                 <i class="icon-play-sign stat_icon"></i>{{sound.soundSocial.playedCount}}
                                 |
                                 <i class="icon-heart stat_icon"></i>{{sound.soundSocial.likesCount}}
@@ -60,8 +60,7 @@
 				<li
 					ng-repeat="music in musics_top | filter:query | orderBy:orderProp">
 					<p>
-						<a href="#/musics/{{music.id}}" class="thumb"><img
-							ng-src="{{music.imageUrl}}"></a>
+						<a href="#/musics/{{music.id}}" class="thumb"><img ng-src="{{music.imageUrl}}"></a>
 					</p>
 					<p>
 						<a href="#/musics/{{music.id}}">{{music.name}}</a>
