--- a/app/partials/user-stream.html
+++ b/app/partials/user-stream.html
@@ -65,7 +65,7 @@
                             <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i> {{sound.soundUserPrefer.likeWording}}</a>
                             <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleRepost(sound.id)"><i class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
                             <div class="pull-right"  style="margin-top: 8px">
-                                <i class="icon-play-sign stat_icon"></i>{{sound.soundSocial.playedCount}}
+                                <i class="icon-play-sign stat_icon"></i><span id="play_count_{{sound.id}}">{{sound.soundSocial.playedCount}}</span>
                                 |
                                 <i class="icon-heart stat_icon"></i>{{sound.soundSocial.likesCount}}
                                 |
