--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -37,8 +37,8 @@
                                <input type="text" id="sound_commentbox_input_{{sound.id}}" class="input-block-level"  placeholder="Leave your comment...">
                                <input type="hidden" id="sound_comment_point_{{sound.id}}">
                             </div>
-                            <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i> {{sound.soundUserPrefer.likeWording}}</a>
-                            <a href="#" class="button button-small button-flat action-button" onclick="return false;" ng-click="toggleRepost(sound.id)"><i class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
+                            <a href="#" class="button button-small button-rounded button-flat action-button" onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i> {{sound.soundUserPrefer.likeWording}}</a>
+                            <a href="#" class="button button-small button-rounded button-flat action-button" onclick="return false;" ng-click="toggleRepost(sound.id)"><i class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
                             <div class="pull-right">
                                 <i class="icon-play-sign stat_icon"></i><span id="play_count_{{sound.id}}">{{sound.soundSocial.playedCount}}</span>
                                 |
