--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -17,9 +17,11 @@
                 <span>上传声音</span>
                 <input id="sound_upload" type="file" name="file" class="upload_button">
         </span> 或将音频文件拖放到此页面 </h4>
+                <h5 style="color: #999;padding-top: 10px">您还可以上传时长<span style="color: rgb(51, 51, 51)">{{defaultSound.minutesToUpload}}</span>分钟的音频文件</h5>
            </div>
         </div>
 
+        <div >
         <div id="progresspart" class="hide">
 
             <div id="progress" class="progress {{defaultSound.uploadStatus}}">
@@ -43,11 +45,11 @@
 
         <div id="sound_info" class="row-fluid hide">
             <div class="span4">
-                <img src="img/default_avatar_large.png">
+                <img src="{{defaultSound.posterUrl}}" id="poster_img" height="200" width="200" >
                   <span style="margin-top: -60px;margin-left: 50px"
                         class="button button-small button-rounded button-flat action-button fileinput-button">
-                    <span>上传封面</span>
-                    <input id="poster_upload" type="file" name="file">
+                    <span>上传海报</span>
+                    <input id="poster_upload" type="file" name="file" onchange="previewImage();">
                   </span>
             </div>
 
@@ -84,12 +86,11 @@
                         <textarea id="description" name="description" placeholder="请介绍这段声音"
                                   ng-model="defaultSound.description" class="input-xlarge"></textarea>
 
-                        <label class="radio inline">
-                            <input type="radio" name="status" value="private" ng-model="defaultSound.status" checked>私有
-                        </label>
-                        <label class="radio inline">
-                            <input type="radio" name="status" value="public" ng-model="defaultSound.status">公开
-                        </label>
+
+                        <div class="btn-group" data-toggle="buttons-radio">
+                            <button type="button" class="btn" ng-click="setPrivate()">私有</button>
+                            <button type="button" class="btn active" ng-click="setPublic()">公开</button>
+                        </div>
                     </div>
 
                     <div class="pull-right">
@@ -104,9 +105,19 @@
             <div class="span3">
             </div>
         </div>
+        </div>
 
     </div>
     <div class="span3">
     </div>
 
 </div>
+<script>
+    function previewImage() {
+        var oFReader = new FileReader();
+        oFReader.onload = function (oFREvent) {
+            $("#poster_img").attr('src', oFREvent.target.result);
+        };
+        oFReader.readAsDataURL(document.getElementById("poster_upload").files[0]);
+    };
+</script>
