--- a/app/partials/user-profile.html
+++ b/app/partials/user-profile.html
@@ -1,3 +1,5 @@
+<ng-include src="'partials/header.html'"></ng-include>
+
 <div role="main" class="container-fluid">
 <div class="row clear-navbar"  style="padding-top: 80px;"></div>  
   <div class="row-fluid">
