--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -2,15 +2,16 @@
     <div class="navbar-inner">
         <a class="brand" href="#"><img width="60" height="60" src="img/logo.jpg"/></a>
         <ul class="nav">
-            <li class="active"><a href="#/stream">stream</a></li>
+            <li class="active"><a href="#/stream">Stream</a></li>
         </ul>
         <form class="navbar-search pull-left" action="">
             <input type="text" class="search-query span2" placeholder="Find a sound">
         </form>
         <ul class="nav pull-right">
-            <li class="pull-right"><a href="#/profile">profile</a></li>
-            <li class="pull-right"><a href="#/upload">upload</a></li>
-            <li class="pull-right"><a href="#/logout" ng-click="logout()">logout</a></li>
+            <li class="pull-right"><a href="#/stream/{{userAlias}}">Yours</a></li>
+            <li class="pull-right"><a href="#/profile">Profile</a></li>
+            <li class="pull-right"><a href="#/upload">Upload</a></li>
+            <li class="pull-right"><a href="#/logout" ng-click="logout()">Logout</a></li>
         </ul>
     </div>
 </div>
