--- a/app/partials/user-profile.html
+++ b/app/partials/user-profile.html
@@ -1,30 +1,14 @@
 <ng-include src="'partials/header.html'"></ng-include>
 
-<div role="main" class="container-fluid">
-<div class="row clear-navbar"  style="padding-top: 80px;"></div>  
-  <div class="row-fluid">
-  	<div class="span2">
-      <!--Sidebar content-->
+<div class="container" style="padding-top:65px">
+    <div class="row-fluid">
+        <div class="span2">
+            <ng-include src="'partials/user/nav.html'"></ng-include>
+        </div>
 
-      Search: <input ng-model="query">
-      Sort by:
-      <select ng-model="orderProp">
-        <option value="name">Alphabetical</option>
-        <option value="age">Newest</option>
-      </select>
+        <div class="span9">
+            <ng-include src="innerPage"></ng-include>
+        </div>
 
     </div>
-    <div class="span6">
-    	<p>Basic Information:</p>
-      <!--Body content-->
-      email:	{{profile.email}} 
-      <br>
-      nickName: {{profile.nickname}}
-      <br>
-      realName: {{profile.realname}}
-      <br>    
-
-    </div>
-  </div>
- </div>
- </div>
+</div>
