--- a/app/partials/user-stream.html
+++ b/app/partials/user-stream.html
@@ -11,12 +11,12 @@
                 <!-- basic social info-->
                 <div style="padding-bottom: 25px">
                     <div style="padding-bottom: 10px">
-                        <i class="icon-music icon-large" title="{{user.social.sounds}} sounds" style="font-size: 18px"><span style="padding-left:10px; padding-right: 10px" title="{{user.social.sounds}} sounds" >{{user.social.sounds}}</span></i>|
-                        <i class="icon-retweet icon-large" title="{{user.social.reposts}} reposts" style="padding-left:10px;font-size: 18px;"><span style="padding-left:10px; padding-right: 10px" title="{{user.social.reposts}} reposts" >{{user.social.reposts}}</span></i>
+                        <i class="icon-music icon-large" title="{{user.userSocial.sounds}} sounds" style="font-size: 18px"><span style="padding-left:10px; padding-right: 10px" title="{{user.userSocial.sounds}} sounds" >{{user.userSocial.sounds}}</span></i>|
+                        <i class="icon-retweet icon-large" title="{{user.userSocial.reposts}} reposts" style="padding-left:10px;font-size: 18px;"><span style="padding-left:10px; padding-right: 10px" title="{{user.userSocial.reposts}} reposts" >{{user.userSocial.reposts}}</span></i>
                     </div>
                     <div>
-                        <i class="icon-user icon-large" title="following {{user.social.followed}}" style="font-size: 18px"><span style="padding-left:10px; padding-right: 10px" title="following {{user.social.followed}}">{{user.social.following}}</span></i>|
-                        <i class="icon-group icon-large" title="{{user.social.followed}} followers" style="padding-left:10px;font-size: 18px;"><span style="padding-left:10px; padding-right: 10px" title="{{user.social.followed}} followers">{{user.social.followed}}</span></i>
+                        <i class="icon-user icon-large" title="following {{user.userSocial.following}}" style="font-size: 18px"><span style="padding-left:10px; padding-right: 10px" title="following {{user.userSocial.following}}">{{user.userSocial.following}}</span></i>|
+                        <i class="icon-group icon-large" title="{{user.userSocial.followed}} followers" style="padding-left:10px;font-size: 18px;"><span style="padding-left:10px; padding-right: 10px" title="{{user.userSocial.followed}} followers">{{user.userSocial.followed}}</span></i>
                     </div>
                 </div>
 
