--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,7 +5,7 @@
             <li class="active"><a href="#/stream">Stream</a></li>
         </ul>
         <form class="navbar-search pull-left" action="">
-            <input type="text" class="search-query span2" placeholder="Find a sound" ng-click="search()" ng-model="q">
+            <input type="text" class="search-query span2" placeholder="Find a sound" ng-model="q" id="search_box">
         </form>
         <ul class="nav pull-right">
             <li class="pull-right"><a href="#/stream/user/{{userAlias}}">Yours</a></li>
